loopfor.LoopStairs.scala.error
Compilation error:
LoopStairs:1: error: not found: value finished
finished = false
^LoopStairs:3: error: not found: value finsihed
while (finsihed!= true) {
       ^LoopStairs:4: error: not found: value isFacingWalls
  if (isFacingWalls()){
      ^LoopStairs:8: error: not found: value foward
    foward()
    ^LoopStairs:12: error: not found: value finished
    finished=true
    ^